--- a/.gitignore
+++ b/.gitignore
@@ -155,3 +155,4 @@ analysis/check_mdtraj_functions.ipynb
 analysis/check_data.ipynb
 analysis/plot_metrics_from_csv.py
 test_dcdLoaders/*
+analysis/note_reproducibility.ipynb
