--- a/.gitignore
+++ b/.gitignore
@@ -159,3 +159,6 @@ analysis/note_reproducibility.ipynb
 check_reproducibility/check.py
 analysis/recover_corrupted_files_from_log.ipynb
 build_noh/copy_files.py
+fixer/prova.py
+check_reproducibility/check_trajs.py
+fixer/sort_mimsmatch_output.py
