--- a/.gitignore
+++ b/.gitignore
@@ -156,8 +156,8 @@ analysis/check_data.ipynb
 analysis/plot_metrics_from_csv.py
 test_dcdLoaders/*
 analysis/note_reproducibility.ipynb
-check_reproducibility/check.py
 fixer/*
 analysis/recover_corrupted_files_from_log.ipynb
 build_noh/copy_files.py
-check_reproducibility/check_trajs.py
+check_reproducibility/*
+process/append_info_from_joined.py
