--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,4 @@ analysis/recover_corrupted_files_from_log.ipynb
 build_noh/copy_files.py
 check_reproducibility/*
 process/append_info_from_joined.py
+support/get_superfamily_distr.py
